--- a/style.css
+++ b/style.css
@@ -46,8 +46,12 @@ img {
     margin-right: 11%;
 }
 
-.color-menu, .timer-menu, .score-menu {
+.color-menu, .difficulty, .timer-menu, .score-menu {
     margin: 0px 20px;
+}
+
+.ballon-container, .timer-menu, .score-menu, .stop-btn {
+    display: none;
 }
 
 .timer-menu div {
@@ -69,17 +73,25 @@ img {
     align-self: center;
  }
 
-#colors {
+#colors  {
     height: 28px;
-    width: 105px;
+    width: 100px;
     cursor: pointer;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
 }
 
-#colors:focus { outline: none; }
+#difficulty {
+    height: 28px;
+    width: 80px;
+    cursor: pointer;
+    border-radius: 15px;
+    padding: 0px 5px;
+}
 
-#colors > option {
+#colors:focus, #difficulty:focus { outline: none; }
+
+#colors > option, #difficulty > option {
     font-size: 1em;
     font-weight: 700;
 }
@@ -88,9 +100,11 @@ img {
     float: right;
     height: 28px;
     width: 28px;
-    border-top: 1px solid #000;
-    border-bottom: 1px solid #000;
-    border-left: 1px solid #000;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    border-left: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .start-btn, .stop-btn {
@@ -117,6 +131,24 @@ img {
     cursor: pointer;
 }
 
+.animation {
+    animation: animat 0.2s linear infinite;
+}
+
+@keyframes animat {
+    0% {
+        height: 150px;
+        width: auto;
+    }
+    50% {
+        height: 148px;
+        width: auto;
+    }
+    100% {
+        height: 146px;
+        width: auto;
+    }
+}
+
 .hide { display: none; }
 .show { display: block; }
-
